# Game

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  7_Build.txt  AI_CONTEXT.md  ALL_FIXES_SUMMARY.md  ARCHITECTURAL-CHECKLIST.md  ARCHITECTURAL-INCONSISTENCIES.md  ARCHITECTURAL-REVIEW-FINDINGS.md  ARCHITECTURAL_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE-DATABASE.md  ARCHITECTURE-QUICK-REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_section_update.md  BUILD.md  BUNDLE_A_COMPLETION.md  BUNDLE_B_COMPLETION.md  BUNDLE_C_COMPLETION.md  CHANGELOG.md  CMakeCache.txt  CMakeLists  CMakeLists.txt  CMakePresets.json  CODESPACE-COORDINATION-WORKFLOW.md  CODE_IMPROVEMENTS_CRITIQUE.md  CODE_QUALITY_VALIDATION.md  CODE_REVIEW_EU4_UI.md  CODE_REVIEW_EUROPE_MAP.md  CODE_REVIEW_GENERATED_TEST_SUITE.md  CODE_REVIEW_INTERACTIVE_ELEMENTS.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_THREAD_SAFETY_FIXES.md  CODE_REVIEW_UI_DIALOGS_SETTINGS.md  CODE_REVIEW_VALIDATION.md  CODE_VALIDATION_FINAL.md  COMPONENT-INHERITANCE-GUIDE.md  COMPREHENSIVE_CODE_REVIEW.md  (+71 more)
.claude/: quality_improvements_plan.md
.devcontainer/: devcontainer.json
.github/: AI_CODING_GUIDELINES.md
.github/hooks/: README.md  pre-commit
.github/workflows/: ci.yml  code-quality.yml
apps/: StressTestRunner.cpp  StressTestRunner.h  main.cpp  main_min.cpp  main_minimal.cpp  test_ecs_integration.cpp  test_population_ui.cpp
archive/: AI_CONTEXT.md  BUILD.md  CMakeLists.txt  README.md  main_minimal.cpp  test_scenario_demo
archive/2025-01-docs-cleanup/: ARCHIVE_MANIFEST.md  DOCUMENTATION_AUDIT_PLAN.md  DOCUMENTATION_AUDIT_PROGRESS_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_REVIEW_NOTES.md  (+1 more)
backup/: EntityManager_legacy.cpp.backup
config/: GameConfig.json
data/: MAP_GENERATION_GUIDE.md  README_MAP_FIXES.md  README_WINDOWS.md  calculate_adjacencies.py  cleanup_for_regeneration.bat  cleanup_for_regeneration.py  download_missing_geojson.py  generate_europe_maps.py  generate_historical_1100.py  generate_improved_boundaries.py  generate_regional_groups.py  generate_soviet_states.py  regenerate_maps.bat  regenerate_maps.sh  test_provinces.json  update_combined_europe.py  update_combined_europe_with_adjacencies.py  validate_historical_1100.py
docs/: 11TH_CENTURY_HISTORICAL_DATA.md  ADMINISTRATIVE_SYSTEM_IMPLEMENTATION_VALIDATION.md  ADMINISTRATIVE_SYSTEM_VALIDATION_REPORT.md  ADMINISTRATIVE_SYSTEM_VALIDATION_REPORT_2025-11-23.md  AI_ACTOR_IMPLEMENTATION_COMPLETE.md  AI_DIRECTOR_FIXES_APPLIED.md  API.md  API_REFERENCE.md  API_TECHNOLOGY_SYSTEM.md  CHARACTER_CODE_CRITIQUE_V2.md  CHARACTER_SYSTEM_ARCHITECTURE.md  CHARACTER_SYSTEM_CODE_CRITIQUE_PHASE2.md  CHARACTER_SYSTEM_IMPLEMENTATION_PLAN.md  CHARACTER_SYSTEM_PLAN_CRITIQUE.md  CHARACTER_SYSTEM_REVIEW.md  CHARACTER_SYSTEM_STATUS.md  CHARACTER_UI_CRITIQUE.md  CODEBASE_EXPLORATION_REPORT.md  CODE_ANALYSIS_REPORT.md  CODE_ANALYSIS_UPDATE.md  CODE_REVIEW_DATA_INTEGRATION.md  CODE_REVIEW_INTEGRATION_SYSTEMS.md  CODE_REVIEW_INTEGRATION_WIRING.md  CODE_REVIEW_PHASE6_7.md  CODE_REVIEW_compilation_fixes.md  CODE_VALIDATION_REPORT.md  CROSS-PLATFORM-BUILD.md  CULTURE_SYSTEM_REVIEW.md  DEBUGGING_RECIPES.md  DEPENDENCIES.md  DIPLOMACY_INTEGRATION_SUMMARY.md  DIPLOMACY_SYSTEM_COMPREHENSIVE_ANALYSIS.md  ECONOMIC_SYSTEM_REVIEW.md  ENTITYID_UTILS_BUGFIXES.md  ENTITY_ID_TYPE_SYSTEM.md  ERROR_HANDLING.md  GPU_RENDERER_FIX_PLAN.md  HANDOVER_NEXT_SESSION.md  HANDOVER_PROPAGATION_COMPLETE.md  HANDOVER_THREAD_SAFETY_FIXES.md  (+53 more)
examples/: influence_system_integration_example.cpp
include/: ScreenAPI.h  WindowsCleanup.h  json_compat.h
mockups/: README.md  UI_MockUp.html  actual_ingame_view.html  actual_population_window.html  actual_trade_window.html  ingame_map.html  ingame_ui.html  main_menu.html  start_screen.html
shaders/: border.frag  border.vert  map.frag  map.vert
src/: test_economic_ecs_integration.cpp  test_military_components_simple.cpp  test_military_ecs_integration.cpp
tests/: CMakeLists.txt  SYSTEM_TEST_001_CONFIG.md  SYSTEM_TEST_004_ECS.md  SYSTEM_TEST_005_THREADING.md  SYSTEM_TEST_006_SAVE.md  SYSTEM_TEST_009_REALM.md  SYSTEM_TEST_010_MAP.md  SYSTEM_TEST_012_ECONOMIC.md  benchmark_naval_pathfinding.cpp  economic_system_stress_test.cpp  naval_combat_tests.cpp  run_week2_verification.sh  test_administrative_components_simple.cpp  test_administrative_system.cpp  test_ai_attention_refactoring.cpp  test_ai_director_refactoring.cpp  test_ai_refactoring.cpp  test_character_improvements.cpp  test_character_relationships_quality.cpp  test_character_system.cpp  test_decay_standalone.cpp  test_diplomacy_cooldown.cpp  test_diplomacy_decay.cpp  test_diplomacy_memory.cpp  test_diplomacy_refactoring.cpp  test_diplomacy_threading.cpp  test_ecs_improvements.cpp  test_enhanced_config.cpp  test_gameplay_refactoring.cpp  test_influence_system.cpp  test_information_propagation.cpp  test_integration_components.cpp  test_logging_macros.cpp  test_map_loading.cpp  test_military_ecs_integration.cpp  test_nation_ai_refactoring.cpp  test_population_refactoring.cpp  test_province_adjacency_integration.cpp  test_province_geometry.cpp  test_realm_refactoring.cpp  (+9 more)
tests/benchmark/game/trade/: TradeBenchmarks.cpp
tests/integration/: test_ai_director_integration.cpp
tests/integration/game/trade/: TradeIntegrationTests.cpp
tests/performance/: test_ai_director_performance.cpp  test_character_system_performance.cpp  test_rendering_profile.cpp
tests/phase3/: PHASE_3_IMPLEMENTATION_PLAN.md  phase-3-summary-report.md  system-001-economic-test-report.md  system-002-military-test-report.md  system-003-diplomacy-test-report.md  system-004-population-test-report.md  system-006-technology-test-report.md  system-007-ai-test-report.md  system-008-administration-test-report.md
tests/testing-docs/: STRESS_TEST_AUTOMATION.md
tests/threading/: test_ai_director_threading.cpp
tests/threading/game/trade/: TradeThreadSafetyTests.cpp
tests/unit/game/trade/: TradeSystemTests.cpp
tools/: combine_maps.py  convert_geojson_to_game.py  extract_countries.py
(+786 files in other folders)
